--- a/package.json
+++ b/package.json
@@ -23,12 +23,15 @@
     "embla-carousel-react": "^8.6.0",
     "lucide-react": "^0.523.0",
     "next": "15.3.4",
+    "next-themes": "^0.4.6",
     "query-string": "^9.2.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.58.1",
     "react-icons": "^5.5.0",
+    "react-image-file-resizer": "^0.4.8",
     "react-redux": "^9.2.0",
+    "sonner": "^2.0.5",
     "tailwind-merge": "^3.3.1",
     "zod": "^3.25.67"
   },
