--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "react-image-file-resizer": "^0.4.8",
     "react-redux": "^9.2.0",
     "sonner": "^2.0.5",
+    "swr": "^2.3.4",
     "tailwind-merge": "^3.3.1",
     "zod": "^3.25.67"
   },
