--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "react-icons": "^5.5.0",
     "react-image-file-resizer": "^0.4.8",
     "react-redux": "^9.2.0",
+    "socket.io-client": "^4.8.1",
     "sonner": "^2.0.5",
     "swr": "^2.3.4",
     "tailwind-merge": "^3.3.1",
