--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "embla-carousel-react": "^8.6.0",
     "lodash": "^4.17.21",
     "lucide-react": "^0.523.0",
+    "motion": "^12.23.12",
     "next": "15.3.4",
     "next-themes": "^0.4.6",
     "query-string": "^9.2.1",
